@@ -6,7 +6,7 @@
 
     <groupId>com.browser</groupId>
     <artifactId>simple-browser</artifactId>
-    <version>0.1.0</version>
+    <version>0.2.0</version>
     <packaging>jar</packaging>
 
     <name>Simple Browser</name>
@@ -81,12 +81,6 @@
                 <version>3.5.1</version>
                 <configuration>
                     <mainClass>com.browser.BrowserApplication</mainClass>
-                    <options>
-                        <option>--module-path</option>
-                        <option>${javafx.runtime.path}</option>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml,javafx.web</option>
-                    </options>
                 </configuration>
             </plugin>
 
